# economy_scrap

./: .env.example  .gitignore  CHANGELOG.md  DASHBOARD_DEPLOYMENT.md  DEPLOYMENT.md  GDELT_COMPLETE.md  GDELT_IMPLEMENTATION_SUMMARY.md  GDELT_SETUP.md  PRD.md  README.md  SCRIPT.md  pyproject.toml
.claude/: settings.json
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-notification.sh  handle-permission-request.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.moai/: manifest.json
.moai/cache/: personalization.json
.moai/config/: config.yaml
.moai/config/sections/: llm.yaml  project.yaml  user.yaml  workflow.yaml
.moai/docs/reports/: sync-report-20260127-092019.md
.moai/memory/: last-session-state.json
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: session-bf3444b4-0cc5-46c9-ac5b-8a770548a890.md
.moai/specs/SPEC-RATESTANCE-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-001/: DDD-COMPLETION-REPORT.md  acceptance.md  plan.md  spec.md
.moai/state/: last-session-state.json  session-memo.md
.moai/worktrees/economy_scrap/: .moai-worktree-registry.json
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx  providers.tsx
dashboard/components/charts/: EventStudyChart.tsx  NewsStanceChart.tsx  RateSeriesChart.tsx
dashboard/components/dashboard/: DateRangeSelector.tsx  EventDetailPanel.tsx  NewsDetailPanel.tsx  StatCard.tsx  (+2 more)
dashboard/types/: index.ts
deploy/: README.md  deploy-index.sh  deploy.sh  ecosystem.config.json  fix-nginx-expect.sh  fix-nginx.sh  index.html  nginx-economy-updated.conf  nginx-economy.conf  start-api.sh
scripts/: start-dev.sh  test_gdelt.py
src/ratestance/: __init__.py  cli.py  config.py  pipeline.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_daily_aggregator.py  test_ecos_client.py  test_event_detector.py  test_event_study.py  test_news_collector.py  test_pipeline.py  test_stance_scorer.py  test_visualizer.py
(+25 files in other folders)
